--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".Finish"></activity>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".Finish" />
+        <activity android:name=".PlayerManagement"></activity>
     </application>
 
 </manifest>
